# CpuBackend

./: .cproject  .project  CMakeLists.txt
app/: CpuBackend.cpp
benchmark/: compute_benchmark.cpp  memory_benchmark.cpp
include/Avocado/: cpu_backend.h
include/CpuBackend/: cpu_backend.h
include/avocado/: cpu_backend.h
src/: CMakeLists.txt  cpu_features.cpp  cpu_properties.cpp  descriptors.cpp  dispatcher.cpp  gemms.cpp  kernel_definitions.hpp  utils.cpp  utils.hpp
src/kernels/: activation.cpp  activation.hpp  array_utils.hpp  basic_math.cpp  batchnorm.cpp  compute_benchmark.cpp  conv2d_implicit_gemm.cpp  conv2d_winograd_fused.cpp  conv2d_winograd_nonfused.cpp  conversion.cpp  convolution.cpp  dropout.cpp  im2row.cpp  kernel_definitions.ipp  losses.cpp  metrics.cpp  optimizers.cpp  pooling.cpp  regularizers.cpp  softmax.cpp  tensor_binary_op.cpp  tensor_op.cpp  tensor_reduction.cpp  tensor_unary_op.cpp  winograd_fused.cpp  winograd_kernels.cpp  winograd_kernels.ipp  winograd_nonfused.cpp
src/vectors/: bf16_simd.hpp  fp16_simd.hpp  fp32_simd.hpp  fp64_simd.hpp  generic_simd.hpp  integer_simd.hpp  simd_casting.hpp  simd_functions.hpp  simd_length.hpp  simd_load_store.hpp  simd_macros.hpp  simd_utils.hpp  simd_vectors.hpp
test/: test_activation.cpp  test_batchnorm.cpp  test_binary_op.cpp  test_gemm.cpp  test_im2row.cpp  test_launcher.cpp  test_losses.cpp  test_optimizers.cpp  test_reduction.cpp  test_regularizers.cpp  test_softmax.cpp  test_tensor_op.cpp  test_unary_op.cpp  test_winograd.cpp
